<resources>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string-array name="elementos">
        <item>Ciclo 5</item>
        <item>Ciclo 6</item>
        <item>Ciclo 7</item>
        <item>Ciclo 8</item>
    </string-array>


    <string name="search">Buscar</string>
    <string name="help">Ayuda</string>
    <string name="settings">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_panel_title">Panel del Administrador</string>
    <string name="tab_empresa">Empresa</string>
    <string name="tab_tours">Tours</string>
    <string name="tab_guias">Guías</string>
    <string name="tab_reportes">Reportes</string>
    <string name="tab_chat">Chat</string>
    <string name="add">Agregar</string>
    <string name="tab_perfil">Perfil</string>

    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_admins">Admins</string>
    <string name="tab_clientes">Clientes</string>
    <string name="tab_registros">Registros</string>


    <string name="tab_mis_tours">Mis tours</string>

    <string name="guia_solicitar_tour">Solicitar tour</string>
    <string name="guia_tours_pendientes">Pendientes</string>
    <string name="guia_historial_tours">Historial</string>


    <string name="tab_empresas">Soporte</string> <!-- o "Soporte" -->


    <!-- General -->
    <string name="app_name">Proyecto_2025</string>
    <string name="untitled">Imagen de galería</string>

    <!-- Empresa -->
    <string name="empresa_titulo">Empresa</string>
    <string name="empresa_estado_borrador">Estado: Borrador</string>
    <string name="empresa_estado_completo">Estado: Completo</string>

    <!-- Checklist -->
    <string name="check_contacto">• Contacto (correo/teléfono)</string>
    <string name="check_ubicacion">• Ubicación confirmada</string>
    <string name="check_fotos">• Galería (mínimo 2)</string>
    <string name="check_descripcion">• Descripción corta</string>

    <!-- Botones -->
    <string name="btn_elegir_ubicacion">Elegir ubicación</string>
    <string name="btn_agregar_fotos">Agregar fotos</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_publicar">Publicar perfil</string>

    <!-- Placeholders -->
    <string name="placeholder_direccion">Sin dirección</string>
    <string name="placeholder_nombre">Nombre comercial (obligatorio)</string>
    <string name="placeholder_correo">Correo (obligatorio)</string>
    <string name="placeholder_telefono">Teléfono (obligatorio)</string>
    <string name="placeholder_web">Sitio web / red social (opcional)</string>
    <string name="placeholder_descripcion">Descripción corta (obligatoria)</string>

    <string name="img">Imagen</string>
    <string name="content_image">Imagen del tour</string>
    <string name="es_porcentaje">¿Es porcentaje?</string>
    <string name="propuesta_pago">Propuesta pago</string>
    <string name="id_gu_a">ID Guía</string>
    <string name="overflow_menu" />

    <string name="sin_tours">Sin tours disponibles</string>
    <string name="crear_tour">Crear nuevo tour</string>
    <string name="opciones">Opciones del tour</string>
    <string name="bienvenido_a_toursapp">Bienvenido a ToursApp!</string>
    <string name="chat">Chat</string>

</resources>