<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSolicitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/guia_solicitar_tour"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPendientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/guia_tours_pendientes"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/guia_historial_tours"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include
            android:id="@+id/subSolicitar"
            layout="@layout/screen_guia_solicitar_tour"
            android:visibility="visible"/>

        <include
            android:id="@+id/subPendientes"
            layout="@layout/screen_guia_tours_pendientes"
            android:visibility="gone"/>

        <include
            android:id="@+id/subHistorial"
            layout="@layout/screen_guia_historial_tours"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>
